--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,9 +16,11 @@
         <span class='icon-bar'></span>
         <span class='icon-bar'></span>
       </button>
-      <%= link_to 'Saas', root_path, class: 'navbar-brand' %>
-    </div>
-
+      <%= link_to root_path, class: 'navbar-brand' do %>
+        <i class='fa fa-users'></i>
+          Dev Match
+      <% end %>
+     </div>
     <div class ='collapse navbar-collapse' id='main-nav-collapse'>
       <ul class='nav navbar-nav navbar-right'>
         <li><%= link_to 'About', about_path %></li>
