Added validations and create action elo

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Morta</title>
+  <title>Dev Match</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -24,11 +24,16 @@
     <div class ='collapse navbar-collapse' id='main-nav-collapse'>
       <ul class='nav navbar-nav navbar-right'>
         <li><%= link_to 'About', about_path %></li>
+        <li><%= link_to 'Contact Us', new_contact_path %></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div>   
 </nav>
   <div class='container'>
+    <% flash.each do |key, value| %>
+      <%= content_tag :div, value, class: "alert alert-#{key}" %>
+    <% end %>
+    
     <%= yield %>
   <div>
 </body>
