--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
 <div class='jumbotron text-center'>
-  <h2>Welcome to Morta Match</h2>
+  <h2>Welcome to Dev Match</h2>
   <h3>A site where Morta</h3>
 </div>
