--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,34 +1,20 @@
 <div class="row">
-  <div class="col-md-4 col-md-offset-4">
-    <div class="well">
-      <h2>Sign up</h2>
-      <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-        <%= devise_error_messages! %>
-
-        <div class="field form_group">
-          <%= f.label :email %><br />
-          <%= f.email_field :email, autofocus: true, class: "form-control" %>
-        </div>
-
-        <div class="field form_group">
-          <%= f.label :password %>
-          <% if @validatable %>
-          <em>(<%= @minimum_password_length %> characters minimum)</em>
-          <% end %><br />
-          <%= f.password_field :password, autocomplete: "off", class: "form-control", class: "form-control" %>
-        </div>
-
-        <div class="field form_group">
-          <%= f.label :password_confirmation %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "off", class: "form-control" %>
-        </div>
-        </br>
-        <div class="actions form-group">
-          <%= f.submit "Sign up",class: "btn btn-success" %>
-        </div>
-      <% end %>
-
-      <%= render "devise/shared/links" %>
+  <div class="col-md-6 col-md-offset-3 text-center">
+    <% if params[:plan] == "1" %>
+      <h1>Create basic account</h1>
+      <p>kekekekekekekekekekekkekekekeekkekekekekekekkekekekekekekkekekek</p>
+    <% else%>
+      <h1>Create pro account</h1>
+      <p>kekekekekekekekekekekkekekekeekkekekekekekekkekekekekekekkekekek</p>
+    <% end %> 
+  </div>
+    
+<% if params[:plan] == "1" %>
+  <%= render "basic_form" %>
+<% else %>
+  <%= render "pro_form" %>
+<% end %>
+  <%= render "devise/shared/links" %>
     </div>
   </div>
 </div>
