--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,8 +2,8 @@
 <html>
 <head>
   <title>Dev Match</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application', media: 'all'%>
+  <%= javascript_include_tag 'application'%>
   <%= csrf_meta_tags %>
 </head>
 <body>
@@ -27,7 +27,6 @@
           <%= link_to "log out", destroy_user_session, class: "btn btn-danger navbar-btn", method: :delete %>
         <% else %>
           <%= link_to "Log in", new_user_session_path, class: "btn btn-primary navbar-btn", method: :get %>
-          <%= link_to "Sign up", new_user_registration_path, class: "btn btn-success navbar-btn", method: :get %>
         <% end %>
       </div>
       <ul class='nav navbar-nav navbar-right'>
